# zVault

./: .gitignore  CLAUDE.md  DEMO.md  DEMO_PRESENTATION.md  DEMO_SCRIPT.md  PRESENTATION.md  PRESENTATION_ZH.md  README.md  package.json  vercel.json
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  railway.json
backend/docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  SERVICES.md
backend/header-relayer/: .dockerignore  .env.example  .gitignore  index.ts  init-light-client.ts  mempool.ts  package.json  railway.json  render.yaml  solana.ts
backend/src/: api.rs  btc_client.rs  btc_spv.rs  config.rs  esplora.rs  lib.rs  logging.rs  main.rs  middleware.rs  sol_client.rs  taproot.rs
backend/src/api/: middleware.rs  mod.rs  server.rs  websocket.rs
backend/src/api/routes/: mod.rs
backend/src/bitcoin/: client.rs  frost_client.rs  mod.rs  spv.rs  taproot.rs
backend/src/common/: config.rs  error.rs  logging.rs  mod.rs
backend/src/deposit_tracker/: api.rs  db.rs  mod.rs  service.rs  sqlite_db.rs  sweeper.rs  types.rs  verifier.rs  watcher.rs  websocket.rs
backend/src/redemption/: builder.rs  mod.rs  queue.rs  service.rs  signer.rs  types.rs  watcher.rs
backend/src/services/: mod.rs
backend/src/solana/: client.rs  mod.rs
backend/src/stealth/: api.rs  mod.rs  service.rs  types.rs
backend/src/storage/: memory.rs  mod.rs  sqlite.rs  traits.rs
backend/src/types/: deposit.rs  mod.rs  redemption.rs  stealth.rs  units.rs
circuits/: .gitignore  Nargo.toml  package.json
circuits/claim/: Nargo.toml
circuits/pool_claim_yield/: Nargo.toml
circuits/pool_deposit/: Nargo.toml
circuits/pool_withdraw/: Nargo.toml
circuits/proof_of_innocence/: Nargo.toml
circuits/scripts/: compile-all.ts  prove.ts
circuits/spend_partial_public/: Nargo.toml
circuits/spend_split/: Nargo.toml
contracts/: .deploy-state.json  .gitignore  Anchor.toml  Cargo.toml  IMPLEMENTATION.md  README.md  config.json  coupon-notes.json  demo-notes.json  package.json  test-deposit-data.json  tsconfig.json
contracts/programs/btc-light-client/: Cargo.toml
contracts/programs/btc-light-client/src/: lib.rs
contracts/programs/ultrahonk-verifier/: Cargo.toml
contracts/programs/ultrahonk-verifier/src/: bn254.rs  constants.rs  error.rs  lib.rs  transcript.rs  types.rs  verifier.rs
contracts/programs/zvault/: Cargo.toml
contracts/programs/zvault/circuits_vk/: claim.vk  spend_partial_public.vk  spend_split.vk
contracts/programs/zvault/src/: constants.rs  error.rs  lib.rs  utils.rs
contracts/programs/zvault/src/instructions/: add_demo_commitment.rs  add_demo_note.rs  add_demo_stealth.rs  announce_stealth.rs  announce_stealth_v2.rs  claim.rs  claim_pool_yield.rs  complete_redemption.rs  compound_yield.rs  create_yield_pool.rs  delegate_viewing_key.rs  deposit_to_pool.rs  harvest_yield.rs  init_vk_registry.rs  initialize.rs  mod.rs  register_name.rs  register_viewing_key.rs  request_redemption.rs  spend_partial_public.rs  spend_split.rs  split_commitment.rs  transfer_stealth.rs  update_yield_rate.rs  verify_deposit.rs  verify_stealth_deposit.rs  verify_stealth_deposit_v2.rs  withdraw_from_pool.rs
contracts/programs/zvault/src/shared/: constants.rs  error.rs  mod.rs
contracts/programs/zvault/src/shared/accounts/: mod.rs  nullifier.rs  parsing.rs  pda.rs  serialization.rs  validation.rs
contracts/programs/zvault/src/shared/bitcoin/: address.rs  merkle_proof.rs  mod.rs  tx_hash.rs
contracts/programs/zvault/src/shared/cpi/: btc_light_client.rs  chadbuffer.rs  mod.rs  sunspot_verifier.rs  token_2022.rs  ultrahonk.rs
contracts/programs/zvault/src/shared/crypto/: groth16.rs  merkle.rs  mod.rs  poseidon.rs  sha256.rs
contracts/programs/zvault/src/shared/introspection/: mod.rs  prior_verification.rs
contracts/programs/zvault/src/state/: block_header.rs  btc_light_client.rs  commitment_tree.rs  deposit.rs  mod.rs  name_registry.rs  pool.rs  reverse_registry.rs  stealth_announcement.rs  vk_registry.rs  yield_pool.rs
contracts/programs/zvault/src/utils/: bitcoin.rs  chadbuffer.rs  crypto.rs  groth16.rs  introspection.rs  mod.rs  token.rs  ultrahonk.rs  validation.rs
contracts/scripts/: check-proof-format.ts  debug-claim.ts  debug-pool-state.ts  debug-proof-format.ts  demo-3min.ts  demo-devnet-stealth.ts  demo-full.ts  demo-verify.ts  deploy-and-seed.ts  deploy-devnet.ts  deploy-fresh-devnet.ts  deploy-localnet-poseidon.ts  deploy-localnet.ts  devnet-setup.ts  devnet-status.ts  diag-proof-layout.ts  diagnostic-transcript.ts  dump-proof.ts  fix-mint-authority.ts  generate-btc-deposit-test-data.ts  init-fresh-devnet.ts  localnet-init-and-seed.ts  profile-cu-usage.ts  seed-coupon-commitments.ts  seed-demo-commitments.ts  set-mint-authority.ts  setup-devnet.ts  show-state-diff.ts  start-localnet-poseidon.sh  test-all.ts  test-claim-public.ts  test-cu-2phase.ts  test-demo-claim.ts  test-demo-flow.ts  (+19 more)
docs/: API.md  ARCHITECTURE.md  CONTRACTS.md  MOBILE.md  PINOCCHIO_MIGRATION_PLAN.md  PRD.md  README.md  SDK.md  TECHNICAL.md  USER_FLOW.md  VISUAL_ARCHITECTURE.md  ZK_PROOFS.md
frontend/: .env.example  .gitignore  README.md  next.config.ts  package.json  test-proof.py  test-zk-proof.py
frost_server/: .gitignore  Cargo.toml  README.md
frost_server/config/: signer1.toml  signer2.toml  signer3.toml
frost_server/scripts/: derive_address.ts  test_frost.sh
frost_server/src/: dkg.rs  keystore.rs  lib.rs  main.rs  server.rs  signing.rs  types.rs
frost_server/tests/: integration.rs  spending_test.rs
mobile-app/: .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  app.json  eas.json  metro.config.js  package.json
noir-circuits/: .gitignore  Nargo.toml  README.md  package.json  test-groth16.mjs
roadmap/: MAINNET_FIX_PLAN.md  PRODUCTION_SECURITY_ROADMAP.md  README.md
scripts/: analyze-vk.ts  e2e_frost_test.ts  spend_utxo_frost.ts
sdk/: .gitignore  README.md  package.json  tsconfig.json
test-vectors/: merkle-vectors.json
zvault-app/: .env.example  next.config.ts  package.json  tsconfig.json  vercel.json
zvault_app/: README.md  package.json
(+571 files in other folders)
