[package]
name = "zbtc"
version = "0.1.0"
edition = "2021"

# Main binary - minimal launcher
[[bin]]
name = "zbtc-api"
path = "src/main.rs"

# Redemption service binary
[[bin]]
name = "redemption"
path = "src/bin/redemption.rs"

[dependencies]
sha2 = "0.10"

bitcoin = { version = "0.32", features = ["rand-std"] }
secp256k1 = { version = "0.29", features = ["rand-std", "global-context"] }

solana-sdk = "2.0"
solana-client = "2.0"
borsh = "1.5"

tokio = { version = "1.0", features = ["full"] }

rand = "0.8"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
chrono = "0.4"
base64 = "0.22"

thiserror = "1.0"

reqwest = { version = "0.11", features = ["json"] }

axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
futures-util = "0.3"

x25519-dalek = { version = "2.0", features = ["static_secrets"] }
k256 = { version = "0.13", features = ["ecdh"] }

dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[dev-dependencies]
mockall = "0.13"
tower = "0.5"
