[package]
name = "frost-server"
version = "0.1.0"
edition = "2021"
description = "FROST threshold signing server for zVault"

[[bin]]
name = "frost-server"
path = "src/main.rs"

[dependencies]
# FROST for secp256k1 with Taproot tweaks
frost-secp256k1-tr = "2.1"

# Web framework
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Bitcoin
bitcoin = { version = "0.32", features = ["rand-std"] }
secp256k1 = { version = "0.29", features = ["rand-std", "global-context"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Crypto
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"

# Utilities
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tempfile = "3"

[dev-dependencies]
tokio-test = "0.4"
tower = "0.5"
